feat(cdn): update endpoints to retrieve mentor and news images, replacing ads functionality
