# docs/swagger.json
@@ -62,22 +62,6 @@
                 "responses": {}
             }
         },
-        "/cdn/ads": {
-            "get": {
-                "description": "Get list ads images and links",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "CDN"
-                ],
-                "summary": "Get ads",
-                "responses": {}
-            }
-        },
         "/cdn/mentor": {
             "get": {
                 "description": "Get list mentor images from storage",
@@ -107,6 +91,22 @@
                     "CDN"
                 ],
                 "summary": "Get modul images",
+                "responses": {}
+            }
+        },
+        "/cdn/news": {
+            "get": {
+                "description": "Get list news images and links",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "CDN"
+                ],
+                "summary": "Get news",
                 "responses": {}
             }
         },
